<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fitfriends.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.fitfriends.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.fitfriends.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fitfriends.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/activityDetailFragment"
        android:name="com.example.fitfriends.ui.profile.ActivityDetailFragment"
        android:label="Szczegóły aktywności"
        tools:layout="@layout/fragment_activity_detail">
        <argument
            android:name="activityId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.fitfriends.ui.auth.AuthFragment"
        android:label="Logowanie"
        tools:layout="@layout/fragment_auth" />

</navigation> 